Replace use of Apache Shiro StringUtils with Spring Framework StringUtils.